Fusion-360-MCP-Server/startup_log.txt

============================================================
2026-02-12 14:42:49.956039: run() called
============================================================
ERROR:
Traceback (most recent call last):
  File "C:/Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server/MCP-link.py", line 93, in run
    from . import mcp_main
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\mcp_main.py", line 18, in <module>
    from . import mcp_integration
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\mcp_integration.py", line 29, in <module>
    from . import cam_operations
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\cam_operations.py", line 80, in <module>
    from .feedback_learning import (
    ...<9 lines>...
    )
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\feedback_learning\__init__.py", line 61, in <module>
    from .feedback_store import (
    ...<6 lines>...
    )
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\feedback_learning\feedback_store.py", line 116
    result1 = _unwrap_mcp_result(mcp_call_func("sqlite", {
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?


============================================================
2026-02-12 14:43:15.182171: run() called
============================================================
ERROR:
Traceback (most recent call last):
  File "C:/Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server/MCP-Link.py", line 93, in run
    from . import mcp_main
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\mcp_main.py", line 18, in <module>
    from . import mcp_integration
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\mcp_integration.py", line 29, in <module>
    from . import cam_operations
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\cam_operations.py", line 80, in <module>
    from .feedback_learning import (
    ...<9 lines>...
    )
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\feedback_learning\__init__.py", line 61, in <module>
    from .feedback_store import (
    ...<6 lines>...
    )
  File "C:\Users/cdeit/fusion360-cam-assistant/Fusion-360-MCP-Server\feedback_learning\feedback_store.py", line 116
    result1 = _unwrap_mcp_result(mcp_call_func("sqlite", {
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?


============================================================
2026-02-12 14:51:11.028635: run() called
============================================================

============================================================
2026-02-12 14:53:51.210894: run() called
============================================================

============================================================
2026-02-12 14:55:42.609027: run() called
============================================================
